--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,44 @@
 /* You can add global styles to this file, and also import other style files */
+@use './assets/styles/variables' as *;
+
+:root {
+  --primary-color: #fefefe;
+  --secondary-color: #bbff00;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+}
+
+* {
+  color: var(--primary-color);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.title {
+  margin-bottom: 40px;
+}
+
+.container {
+  width: 1250px;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+  transition: width 0.3s ease-in-out;
+}
+
+@media (max-width: $breakpoint-lg) {
+  .container {
+    width: 100%;
+    padding: 15px;
+  }
+}
+
+@media (max-width: $breakpoint-md) {
+  .container {
+    padding: 10px;
+  }
+}
