--- a/src/app/features/components/users/user-list.component.html
+++ b/src/app/features/components/users/user-list.component.html
@@ -8,11 +8,17 @@
         <th>Name</th>
         <th>Email</th>
         <th>Website</th>
+        <th>Action</th>
       </tr>
       <tr *ngFor="let user of users">
-        <td>{{ user.name }}</td>
-        <td>{{ user.email }}</td>
-        <td>{{ user.website }}</td>
+        <td data-title="Name">{{ user.name }}</td>
+        <td data-title="Email">{{ user.email }}</td>
+        <td data-title="Website">{{ user.website }}</td>
+        <td>
+          <button>
+            View Detail
+          </button>
+        </td>
       </tr>
     </table>
   </app-loading-error-wrapper>
