--- a/src/app/features/components/users/user-list.component.scss
+++ b/src/app/features/components/users/user-list.component.scss
@@ -1,3 +1,5 @@
+@use 'variables' as *; 
+
 table {
   width: 100%;
   table-layout: fixed;
@@ -5,13 +7,17 @@ table {
 
   tr {
 
-    th {
-      padding: 20px 15px;
-      text-align: left;
+    &:first-child {  
       background: #2c3e50;
       -webkit-backdrop-filter: blur(8px);
       backdrop-filter: blur(8px);
       box-shadow: 0px 10px 15px 10px rgb(0 0 0 / 15%);
+    }
+
+    th {
+      padding: 20px 15px;
+      text-align: left;
+      color: var(--secondary-color);
     }
     
     td {
@@ -19,6 +25,75 @@ table {
       text-align: left;
       vertical-align:middle;
       border-bottom: solid 2px var(--primary-color);
+      word-wrap: break-word;
+      overflow-wrap: break-word;
+
+      button {
+        background: var(--secondary-color);
+        color: #2c3e50;
+        padding: 10px 15px;
+        font-size: 18px;
+        font-weight: bold;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+
+        &:hover {
+          background-color: var(--secondary-color-hover);
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: $breakpoint-md) {
+  table {
+    display: block;
+
+    tr {
+      display: block;
+
+      &:nth-child(odd) {
+        background: rgba(44, 62, 80, 0.8);
+      }
+
+      &:first-child {
+        height: 5px;
+        background: var(--secondary-color)
+      }
+
+      th {
+        display: none;
+      }
+  
+      td {
+        display: block;
+        padding: 10px 0;
+        border-bottom: none;
+        font-size: 16px;
+
+        &:before {
+          content: attr(data-title);
+          color: var(--secondary-color);
+          margin-bottom: 3px;
+          min-width: 98px;
+          font-size: 13px;
+          font-weight: bold;
+          text-transform: uppercase;
+          display: block;
+          opacity: 0.8;
+        }
+
+        &:last-child {
+          border-bottom: solid 2px var(--primary-color);
+        }
+
+        button {
+          display: block;
+          width: 100%;
+        }
+      }
     }
   }
 }
