--- a/src/app/features/components/users/user-list.component.scss
+++ b/src/app/features/components/users/user-list.component.scss
@@ -27,8 +27,9 @@ table {
       border-bottom: solid 2px var(--primary-color);
       word-wrap: break-word;
       overflow-wrap: break-word;
+      padding: 20px 0;
 
-      button {
+      a {
         background: var(--secondary-color);
         color: #2c3e50;
         padding: 10px 15px;
@@ -38,6 +39,7 @@ table {
         border-radius: 5px;
         cursor: pointer;
         transition: all 0.3s ease;
+        text-decoration: none;
 
         &:hover {
           background-color: var(--secondary-color-hover);
@@ -53,10 +55,6 @@ table {
 
     tr {
       display: block;
-
-      &:nth-child(odd) {
-        background: rgba(44, 62, 80, 0.8);
-      }
 
       &:first-child {
         height: 5px;
@@ -89,9 +87,10 @@ table {
           border-bottom: solid 2px var(--primary-color);
         }
 
-        button {
+        a {
           display: block;
           width: 100%;
+          text-align: center;
         }
       }
     }
