loading error wrapper component unit test

--- a/src/app/shared/components/loading-error-wrapper/loading-error-wrapper.component.html
+++ b/src/app/shared/components/loading-error-wrapper/loading-error-wrapper.component.html
@@ -2,7 +2,7 @@
 <app-error-handler
   [isError]="!!(state.error$ | async)"
   [retry]="retry"
-  />
-<ng-container *ngIf="!(state.loading$ | async) && !(state.error$ | async)">
+/>
+<div data-test="content-wrapper" *ngIf="!(state.loading$ | async) && !(state.error$ | async)">
   <ng-content />
-</ng-container>
+</div>
