add more test and refactor a bit

--- a/src/app/shared/components/spinner/spinner.component.html
+++ b/src/app/shared/components/spinner/spinner.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="isLoading" class="loader-wrapper">
+<div *ngIf="isLoading" class="loader-wrapper" data-test="loader-wrapper">
   <!-- Skeleton loading can be better looking and have better ui experience for user. i'm using spinner animation instead to save implementation time-->
   <div class="loader"></div>
 </div>
