--- a/src/app/features/components/user-detail/user-detail.component.html
+++ b/src/app/features/components/user-detail/user-detail.component.html
@@ -1,3 +1,5 @@
+<app-breadcrumbs [breadcrumbs]="breadcrumbs"/>
+
 <section>
   <h1 class="title">User Detail</h1>
   <app-loading-error-wrapper [retry]="fetchUserDetail.bind(this)">
