--- a/src/app/features/components/users/user-list.component.scss
+++ b/src/app/features/components/users/user-list.component.scss
@@ -21,13 +21,12 @@ table {
     }
     
     td {
-      padding: 15px;
       text-align: left;
       vertical-align:middle;
       border-bottom: solid 2px var(--primary-color);
       word-wrap: break-word;
       overflow-wrap: break-word;
-      padding: 20px 0;
+      padding: 20px 15px;
 
       a {
         background: var(--secondary-color);
